@@ -1,5 +1,9 @@
 1999-07-20  Harlan Stenn  <stenn@whimsy.udel.edu>
 
+	* util/ntptime.c: FreeBSD nano patches
+	From: Per Hedeland <per@erix.ericsson.se>
+	(similar patch from Allen Smith <easmith@beatrice.rutgers.edu>)
+
 	* include/ntp.h:
 	include/ntp_fp.h:
 	include/ntp_io.h:
